RESOLVED FIXED32148
New History changes do not compile for Chromium/V8
https://bugs.webkit.org/show_bug.cgi?id=32148
Summary New History changes do not compile for Chromium/V8
Andrew Wilson
Reported 2009-12-03 22:16:05 PST
The new history "pushState" support added in r51644 don't work (compile) under V8/Chromium. We need to add appropriate V8 bindings and chromium versions of the new History APIs.
Attachments
proposed patch (7.63 KB, patch)
2009-12-03 22:30 PST, Andrew Wilson
no flags
Andrew Wilson
Comment 1 2009-12-03 22:30:01 PST
Created attachment 44295 [details] proposed patch
Adam Barth
Comment 2 2009-12-03 22:31:26 PST
Comment on attachment 44295 [details] proposed patch ok
Andrew Wilson
Comment 3 2009-12-03 22:42:36 PST
landed initial patch to allow chromium to compile as r51681. pushState()/replaceState() are just stubbed out for now in Chromium.
Adam Barth
Comment 4 2009-12-03 23:26:51 PST
Comment on attachment 44295 [details] proposed patch This has landed.
Darin Fisher (:fishd, Google)
Comment 5 2009-12-16 12:17:26 PST
Closing this bug since we now compile. I'll open another bug about implementing BackForwardListChromium.cpp and related bits. (See also: http://code.google.com/p/chromium/issues/detail?id=29393)
Note You need to log in before you can comment on or make changes to this bug.