New History changes do not compile for Chromium/V8 https://bugs.webkit.org/show_bug.cgi?id=32148

Reviewed by Adam Barth.

Existing tests suffice (just trying to get code to compile).

* WebCore.gypi:
Added V8HistoryCustom.cpp and other missing files.
* bindings/v8/custom/V8CustomBinding.h:
Added custom handlers for History.pushState()/replaceState().
* bindings/v8/custom/V8HistoryCustom.cpp: Added.
Added custom handlers for History.pushState()/replaceState().
* history/BackForwardListChromium.cpp:
(WebCore::BackForwardList::pushStateItem):
Stubbed out this routine for now - will implement in the future.

Canonical link: https://commits.webkit.org/43108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51681 268f45cc-cd09-0410-ab3c-d52691b4dbfc